Bug 1402311 - use fill-opacity instead of hardcoded fill colour for disabled overflow button in customize mode, r=dao
MozReview-Commit-ID: JKeA5ZNAh5J

UltraBlame original commit: 69dfc35d912dfaa096f9e9d66cda13ef60babe38

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -3220,77 +3220,41 @@ bottom
 }
 /
 *
-The
-overflow
-button
-icon
-_looks_
-disabled
-but
-is
-also
-shown
-as
-[
-open
-]
-.
-*
-/
-#
-nav
--
-bar
-[
-customizing
-]
->
-.
-overflow
--
-button
-{
-/
-*
-This
-color
-is
+In
+customize
+mode
 the
-hard
--
-coded
-#
-4c4c4c
-at
-40
-%
-opacity
-as
-found
-in
-toolbarbutton
--
-icons
+overflow
+button
+should
+look
+both
+'
+disabled
+'
+and
+'
+open
+'
 .
-inc
+*
+So
+we
+make
+the
+button
+fully
+opaque
+but
+fill
+the
+icon
+semi
+-
+transparent
 .
-css
 *
 /
-fill
-:
-hsla
-(
-0
-0
-%
-30
-%
-.
-4
-)
-;
-}
 #
 nav
 -
@@ -3327,6 +3291,14 @@ background
 opacity
 :
 1
+;
+fill
+-
+opacity
+:
+0
+.
+4
 ;
 }
 #
